# i3idle-external

./: Cargo.toml  LICENSE  README.md  config.example.toml
src/: main.rs
